# adventofcode2021

./: .isort.cfg  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-test.yml
python/: .flake8  .isort.cfg  README.md  mypy.ini  pyproject.toml
python/scripts/: format.sh  lint.sh
python/src/: utils.py
python/src/day10/: day10.py
python/src/day11/: day11.py
python/src/day12/: day12.py
python/src/day13/: day13.py
python/src/day14/: day14.py
python/src/day15/: day15.py  day15bis.py
python/src/day16/: day16.py
python/src/day17/: day17.py
python/src/day18/: day18.py
python/src/day2/: day2.py
python/src/day3/: day3.py
python/src/day4/: day4.py
python/src/day5/: day5.py
python/src/day6/: day6.py
python/src/day7/: day7.py
python/src/day8/: day8.py
python/src/day9/: day9.py
python/tests/: day10_test.py  day11_test.py  day12_test.py  day13_test.py  day14_test.py  day16_test.py  day17_test.py  day18_test.py  day7_test.py  day8_test.py  day9_test.py
python/tests/day15/: day15_test.py  day15bis_test.py
src/: utils.py
src/day3/: day3.py
