[tool.poetry]
name = "adventofcode2021"
version = "1.0.0"
description = ""
authors = ["Guillaume Smith <gwil1248@fastmail.net>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.11b1"
seed-isort-config = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
