[tool.poetry]
name = "adventofcode2021"
version = "1.0.0"
description = ""
authors = ["Guillaume Smith <gwil1248@fastmail.net>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.0"
anytree = "^2.8.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^24.3"
seed-isort-config = "^2.2.0"
pytest = "^6.2.5"
mypy = "^0.910"
autoflake = "^1.4"
flake8 = "^4.0.1"
docformatter = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
