[project]
name = "adventofcode2021"
version = "1.1.0"
description = ""
authors = [
    {name = "Guillaume Smith", email = "gwil1248@fastmail.net"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "anytree (>=2.12.1,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"
mypy = ">=1.15.0,<2.0.0"
ruff = ">=0.11.2,<1.0.0"

[build-system]
requires = ["poetry-core>=2.1.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
ignore=["E203"]
