[project]
name = "adventofcode2021"
version = "2.0.0"
description = ""
authors = [
    {name = "Guillaume Smith", email = "gwil1248@fastmail.net"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"

dependencies = [
    "anytree (>=2.12.1,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "mypy>=1.20.2,<2.0.0",
    "ruff>=0.15.12,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 120
indent-width = 4

# Assume Python 3.14
target-version = "py314"

[tool.ruff.lint]
ignore=["E203"]

[[tool.mypy.overrides]]
module = "anytree"
ignore_missing_imports = true